[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/PlayerMovement.gd" type="Script" id=1]
[ext_resource path="res://sprites/patinho criminoso.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.51437, 11.5761 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.09607, 0.923656 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.22057, 13.5962 )

[sub_resource type="Animation" id=4]
length = 50.0
tracks/0/type = "value"
tracks/0/path = NodePath("patinho criminoso:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 46.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 5 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("patinho criminoso:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 300
jump_speed = -900
friction = 0.5
fallbreak = 0.5

[node name="patinho criminoso" type="Sprite" parent="."]
position = Vector2( -3.77357, 4.51815 )
texture = ExtResource( 2 )
flip_h = true
vframes = 2
hframes = 4
frame = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -5.77844, 8.25464 )
shape = SubResource( 1 )

[node name="groundDetect" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="groundDetect"]
position = Vector2( -5.86442, 20.7049 )
shape = SubResource( 2 )

[node name="hit" type="Area2D" parent="."]
position = Vector2( 0.397301, -0.264866 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hit"]
position = Vector2( -5.6704, 7.38164 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PDCabra = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="JumpSave" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="body_entered" from="groundDetect" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="groundDetect" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="hit" to="." method="_on_hit_area_entered"]
[connection signal="body_entered" from="hit" to="." method="_on_hit_body_entered"]
[connection signal="timeout" from="JumpSave" to="." method="_on_Timer_timeout"]
